# file_to_database_table

./: .gitignore  FileToDBConverter.spec  README.md  config.json.template  gui.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
docs/: RELEASE.md  STRUCTURE.md
scripts/: build_exe.bat  build_exe.ps1
src/: __init__.py  app.py  database.py  file_processor.py  gui_main.py  utils.py
src/dialogs/: __init__.py  connection_dialog.py  preview_dialog.py
