[project]
name = "file-to-database-table"
version = "0.1.0"
description = "Convert CSV or Excel files into MS SQL Server database tables"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3",
    "pyodbc>=5.3.0",
    "openpyxl>=3.1.5",
    "cryptography>=44.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "gui.py"]

[tool.uv]
dev-dependencies = []
