[project]
name = "file-to-database-table"
version = "0.1.0"
description = "Convert CSV or Excel files into MS SQL Server database tables"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "pyodbc>=5.0.0",
    "openpyxl>=3.1.5",
    "cryptography>=41.0.0",
    "numpy>=2.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2024.0",
    "six>=1.16.0",
    "sortedcontainers>=2.4.0",
    "tzdata>=2024.0",
    "et-xmlfile>=2.0.0",
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
    "darkdetect>=0.8.0",
    "pyinstaller>=6.0.0",
    "pyinstaller-hooks-contrib>=2025.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py", "gui.py"]

[tool.uv]
dev-dependencies = []
